--- a/requirements.txt
+++ b/requirements.txt
@@ -1,133 +1,133 @@
-# absl-py==2.1.0
-# adagio==0.2.6
-# aiohappyeyeballs==2.4.3
-# aiohttp==3.10.10
-# aiosignal==1.3.1
-# alembic==1.14.0
-# altair==4.2.2
-# annotated-types==0.7.0
-# anyio==4.6.2.post1
-# appdirs==1.4.4
-# argon2-cffi==23.1.0
-# argon2-cffi-bindings==21.2.0
-# arrow==1.3.0
-# astroid==3.3.5
-# asttokens==2.4.1
-# async-lru==2.0.4
-# attrs==24.2.0
-# autopep8==2.0.4
-# babel==2.16.0
-# beautifulsoup4==4.12.3
+absl-py==2.1.0
+adagio==0.2.6
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
+aiosignal==1.3.1
+alembic==1.14.0
+altair==4.2.2
+annotated-types==0.7.0
+anyio==4.6.2.post1
+appdirs==1.4.4
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+astroid==3.3.5
+asttokens==2.4.1
+async-lru==2.0.4
+attrs==24.2.0
+autopep8==2.0.4
+babel==2.16.0
+beautifulsoup4==4.12.3
 bertopic==0.16.4
-# bleach==6.2.0
-# blinker==1.9.0
+bleach==6.2.0
+blinker==1.9.0
 # blis==1.0.1
-# bokeh==3.6.1
-# cachetools==5.5.0
-# catalogue==2.0.10
-# certifi==2024.8.30
-# cffi==1.17.1
-# charset-normalizer==3.4.0
-# click==8.1.7
-# cloudpathlib==0.20.0
-# cloudpickle==3.1.0
-# colorcet==3.1.0
-# comm==0.2.2
-# confection==0.1.5
-# contourpy==1.3.1
-# cryptography==43.0.3
-# cycler==0.12.1
-# cymem==2.0.8
-# dask==2024.11.2
-# dataclasses-json==0.6.7
-# datacompy==0.14.4
-# datasets==3.1.0
-# datashader==0.16.3
-# debugpy==1.8.8
-# decorator==5.1.1
-# defusedxml==0.7.1
-# Deprecated==1.2.14
-# dill==0.3.8
-# dirtyjson==1.0.8
-# distro==1.9.0
-# docker==7.1.0
-# docstring-to-markdown==0.15
-# entrypoints==0.4
-# et_xmlfile==2.0.0
-# executing==2.1.0
-# Faker==30.8.2
-# fastcore==1.7.20
-# fastjsonschema==2.20.0
-# favicon==0.7.0
-# filelock==3.16.1
-# filetype==1.2.0
-# flake8==7.1.1
-# fonttools==4.54.1
-# fqdn==1.5.1
-# frozenlist==1.5.0
-# fs==2.4.16
-# fsspec==2024.9.0
-# fugue==0.9.1
+bokeh==3.6.1
+cachetools==5.5.0
+catalogue==2.0.10
+certifi==2024.8.30
+cffi==1.17.1
+charset-normalizer==3.4.0
+click==8.1.7
+cloudpathlib==0.20.0
+cloudpickle==3.1.0
+colorcet==3.1.0
+comm==0.2.2
+confection==0.1.5
+contourpy==1.3.1
+cryptography==43.0.3
+cycler==0.12.1
+cymem==2.0.8
+dask==2024.11.2
+dataclasses-json==0.6.7
+datacompy==0.14.4
+datasets==3.1.0
+datashader==0.16.3
+debugpy==1.8.8
+decorator==5.1.1
+defusedxml==0.7.1
+Deprecated==1.2.14
+dill==0.3.8
+dirtyjson==1.0.8
+distro==1.9.0
+docker==7.1.0
+docstring-to-markdown==0.15
+entrypoints==0.4
+et_xmlfile==2.0.0
+executing==2.1.0
+Faker==30.8.2
+fastcore==1.7.20
+fastjsonschema==2.20.0
+favicon==0.7.0
+filelock==3.16.1
+filetype==1.2.0
+flake8==7.1.1
+fonttools==4.54.1
+fqdn==1.5.1
+frozenlist==1.5.0
+fs==2.4.16
+fsspec==2024.9.0
+fugue==0.9.1
 # gensim==4.3.3
-# gitdb==4.0.11
-# GitPython==3.1.43
-# greenlet==3.1.1
-# h11==0.14.0
-# h2==4.1.0
+gitdb==4.0.11
+GitPython==3.1.43
+greenlet==3.1.1
+h11==0.14.0
+h2==4.1.0
 hdbscan==0.8.40
-# holoviews==1.20.0
-# hpack==4.0.0
-# htbuilder==0.6.2
-# httpcore==1.0.6
-# httpx==0.27.2
-# httpx-sse==0.4.0
-# huggingface-hub==0.26.2
-# hyperframe==6.0.1
-# idna==3.10
-# imageio==2.36.0
-# importlib_metadata==8.5.0
-# ipykernel==6.29.5
-# ipython==8.29.0
-# ipywidgets==8.1.5
-# isoduration==20.11.0
-# isort==5.13.2
-# jedi==0.19.2
-# Jinja2==3.1.4
-# jiter==0.7.0
-# joblib==1.4.2
-# jq==1.8.0
-# json5==0.9.28
-# jsonpatch==1.33
-# jsonpointer==3.0.0
-# jsonschema==4.23.0
-# jsonschema-specifications==2024.10.1
-# jupyter==1.1.1
-# jupyter-console==6.6.3
-# jupyter-events==0.10.0
-# jupyter-lsp==2.2.5
-# jupyter_client==8.6.3
-# jupyter_core==5.7.2
-# jupyter_server==2.14.2
-# jupyter_server_terminals==0.5.3
-# jupyterlab==4.2.5
-# jupyterlab-lsp==5.1.0
-# jupyterlab_pygments==0.3.0
-# jupyterlab_server==2.27.3
-# jupyterlab_widgets==3.0.13
-# keybert==0.8.5
-# kiwisolver==1.4.7
-langchain==0.3.7
+holoviews==1.20.0
+hpack==4.0.0
+htbuilder==0.6.2
+httpcore==1.0.6
+httpx==0.27.2
+httpx-sse==0.4.0
+huggingface-hub==0.26.2
+hyperframe==6.0.1
+idna==3.10
+imageio==2.36.0
+importlib_metadata==8.5.0
+ipykernel==6.29.5
+ipython==8.29.0
+ipywidgets==8.1.5
+isoduration==20.11.0
+isort==5.13.2
+jedi==0.19.2
+Jinja2==3.1.4
+jiter==0.7.0
+joblib==1.4.2
+jq==1.8.0
+json5==0.9.28
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter==1.1.1
+jupyter-console==6.6.3
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.14.2
+jupyter_server_terminals==0.5.3
+jupyterlab==4.2.5
+jupyterlab-lsp==5.1.0
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.13
+keybert==0.8.5
+kiwisolver==1.4.7
+# langchain==0.3.7
 # langchain-community==0.3.5
 # langchain-core==0.3.15
-langchain-openai==0.2.6
+# langchain-openai==0.2.6
 # langchain-text-splitters==0.3.2
-langchain-together==0.2.0
-# langcodes==3.5.0
-# langid==1.1.6
-# langsmith==0.1.142
-# language_data==1.3.0
-# lazy_loader==0.4
-# linkify-it-py==2.0.3
+# langchain-together==0.2.0
+langcodes==3.5.0
+langid==1.1.6
+langsmith==0.1.142
+language_data==1.3.0
+lazy_loader==0.4
+linkify-it-py==2.0.3
 llama-cloud==0.1.4
 llama-index==0.11.23
 llama-index-agent-openai==0.3.4
@@ -145,176 +145,176 @@ llama-index-question-gen-openai==0.2.0
 llama-index-readers-file==0.3.0
 llama-index-readers-llama-parse==0.3.0
 llama-parse==0.5.13
-# llvmlite==0.43.0
-# locket==1.0.0
-# lxml==5.3.0
-# Mako==1.3.6
-# marisa-trie==1.2.1
-# Markdown==3.7
-# markdown-it-py==3.0.0
-# markdownlit==0.0.7
-# MarkupSafe==3.0.2
-# marshmallow==3.23.1
-# matplotlib==3.9.2
-# matplotlib-inline==0.1.7
-# mccabe==0.7.0
-# mdit-py-plugins==0.4.2
-# mdurl==0.1.2
-# mistune==3.0.2
-# more-itertools==10.5.0
-# mpmath==1.3.0
-# multidict==6.1.0
-# multipledispatch==1.0.0
-# multiprocess==0.70.16
-# munch==2.5.0
-# murmurhash==1.0.10
-# mypy-extensions==1.0.0
-# nbclient==0.10.0
-# nbconvert==7.16.4
-# nbformat==5.10.4
-# nest-asyncio==1.6.0
-# networkx==3.4.2
-# nltk==3.9.1
-# notebook==7.2.2
-# notebook_shim==0.2.4
-# numba==0.60.0
+llvmlite==0.43.0
+locket==1.0.0
+lxml==5.3.0
+Mako==1.3.6
+marisa-trie==1.2.1
+Markdown==3.7
+markdown-it-py==3.0.0
+markdownlit==0.0.7
+MarkupSafe==3.0.2
+marshmallow==3.23.1
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mccabe==0.7.0
+mdit-py-plugins==0.4.2
+mdurl==0.1.2
+mistune==3.0.2
+more-itertools==10.5.0
+mpmath==1.3.0
+multidict==6.1.0
+multipledispatch==1.0.0
+multiprocess==0.70.16
+munch==2.5.0
+murmurhash==1.0.10
+mypy-extensions==1.0.0
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+networkx==3.4.2
+nltk==3.9.1
+notebook==7.2.2
+notebook_shim==0.2.4
+numba==0.60.0
 # numpy==1.26.4
-# nvidia-cublas-cu12==12.4.5.8
-# nvidia-cuda-cupti-cu12==12.4.127
-# nvidia-cuda-nvrtc-cu12==12.4.127
-# nvidia-cuda-runtime-cu12==12.4.127
-# nvidia-cudnn-cu12==9.1.0.70
-# nvidia-cufft-cu12==11.2.1.3
-# nvidia-curand-cu12==10.3.5.147
-# nvidia-cusolver-cu12==11.6.1.9
-# nvidia-cusparse-cu12==12.3.1.170
-# nvidia-nccl-cu12==2.21.5
-# nvidia-nvjitlink-cu12==12.4.127
-# nvidia-nvtx-cu12==12.4.127
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
 openai==1.54.3
-# openpyxl==3.1.5
-# ordered-set==4.1.0
-# orjson==3.10.11
-# overrides==7.7.0
-# packaging==24.2
+openpyxl==3.1.5
+ordered-set==4.1.0
+orjson==3.10.11
+overrides==7.7.0
+packaging==24.2
 pandas==2.2.3
-# pandocfilters==1.5.1
-# panel==1.5.4
-# param==2.1.1
-# parso==0.8.4
-# partd==1.4.2
-# pexpect==4.9.0
-# pillow==11.0.0
-# platformdirs==4.3.6
-# plotly==5.24.1
-# pluggy==1.5.0
-# polars==1.12.0
-# preshed==3.0.9
-# prometheus_client==0.21.0
-# prompt_toolkit==3.0.48
-# propcache==0.2.0
-# protobuf==5.28.3
-# psutil==5.9.8
+pandocfilters==1.5.1
+panel==1.5.4
+param==2.1.1
+parso==0.8.4
+partd==1.4.2
+pexpect==4.9.0
+pillow==11.0.0
+platformdirs==4.3.6
+plotly==5.24.1
+pluggy==1.5.0
+polars==1.12.0
+preshed==3.0.9
+prometheus_client==0.21.0
+prompt_toolkit==3.0.48
+propcache==0.2.0
+protobuf==5.28.3
+psutil==5.9.8
 psycopg==3.2.3
 psycopg-binary==3.2.3
-# ptyprocess==0.7.0
-# pure_eval==0.2.3
-# pyarrow==18.0.0
-# pycodestyle==2.12.1
-# pycparser==2.22
-# pyct==0.5.0
-# pydantic==2.9.2
-# pydantic-settings==2.6.1
-# pydantic_core==2.23.4
-# pydeck==0.9.1
-# pydocstyle==6.3.0
-# pyflakes==3.2.0
-# Pygments==2.18.0
-# pylint==3.3.1
-# pymdown-extensions==10.12
-# pynndescent==0.5.13
-# pyparsing==3.2.0
-# pypdf==5.1.0
-# pysbd==0.3.4
-# python-dateutil==2.9.0.post0
-# python-decouple==3.8
-# python-dotenv==1.0.1
-# python-json-logger==2.0.7
-# python-lsp-jsonrpc==1.1.2
-# python-lsp-server==1.12.0
-# pytoolconfig==1.3.1
-# pytz==2024.2
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==18.0.0
+pycodestyle==2.12.1
+pycparser==2.22
+pyct==0.5.0
+pydantic==2.9.2
+pydantic-settings==2.6.1
+pydantic_core==2.23.4
+pydeck==0.9.1
+pydocstyle==6.3.0
+pyflakes==3.2.0
+Pygments==2.18.0
+pylint==3.3.1
+pymdown-extensions==10.12
+pynndescent==0.5.13
+pyparsing==3.2.0
+pypdf==5.1.0
+pysbd==0.3.4
+python-dateutil==2.9.0.post0
+python-decouple==3.8
+python-dotenv==1.0.1
+python-json-logger==2.0.7
+python-lsp-jsonrpc==1.1.2
+python-lsp-server==1.12.0
+pytoolconfig==1.3.1
+pytz==2024.2
 pyvespa==0.50.0
-# pyviz_comms==3.0.3
-# PyYAML==6.0.2
-# pyzmq==26.2.0
-# ragas==0.2.4
-# RapidFuzz==3.10.1
-# referencing==0.35.1
-# regex==2024.11.6
+pyviz_comms==3.0.3
+PyYAML==6.0.2
+pyzmq==26.2.0
+ragas==0.2.4
+RapidFuzz==3.10.1
+referencing==0.35.1
+regex==2024.11.6
 requests==2.32.3
-# requests-toolbelt==1.0.0
-# rfc3339-validator==0.1.4
-# rfc3986-validator==0.1.1
-# rich==13.9.4
-# rope==1.13.0
-# rouge_score==0.1.2
-# rpds-py==0.21.0
-# safetensors==0.4.5
-# scikit-image==0.24.0
+requests-toolbelt==1.0.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.9.4
+rope==1.13.0
+rouge_score==0.1.2
+rpds-py==0.21.0
+safetensors==0.4.5
+scikit-image==0.24.0
 scikit-learn==1.5.2
-# scipy==1.13.1
-# seaborn==0.13.2
-# Send2Trash==1.8.3
+scipy==1.13.1
+seaborn==0.13.2
+Send2Trash==1.8.3
 sentence-transformers==3.3.0
-# shellingham==1.5.4
-# six==1.16.0
-# smart-open==7.0.5
-# smmap==5.0.1
-# sniffio==1.3.1
-# snowballstemmer==2.2.0
-# soupsieve==2.6
-# spacy==3.8.2
-# spacy-legacy==3.0.12
-# spacy-loggers==1.0.5
-# SQLAlchemy==2.0.35
-# srsly==2.4.8
-# st-annotated-text==4.0.1
-# st-theme==1.2.3
-# stack-data==0.6.3
-# streamlit==1.40.1
-# streamlit-aggrid==1.0.5
-# streamlit-camera-input-live==0.2.0
-# streamlit-card==1.0.2
-# streamlit-embedcode==0.1.2
-# streamlit-extras==0.5.0
-# streamlit-faker==0.0.3
-# streamlit-image-coordinates==0.1.9
-# streamlit-keyup==0.2.4
-# streamlit-pills==0.3.0
-# streamlit-toggle-switch==1.0.2
-# streamlit-vertical-slider==2.5.5
-# striprtf==0.0.26
-# sympy==1.13.1
-# tenacity==8.5.0
-# terminado==0.18.1
-# thinc==8.3.2
-# threadpoolctl==3.5.0
-# tifffile==2024.9.20
-# tiktoken==0.8.0
-# tinycss2==1.4.0
-# tokenizers==0.20.3
-# toml==0.10.2
-# tomlkit==0.13.2
-# toolz==1.0.0
-# topicgpt==1.0.0
-# torch==2.5.1
-# tornado==6.4.1
+shellingham==1.5.4
+six==1.16.0
+smart-open==7.0.5
+smmap==5.0.1
+sniffio==1.3.1
+snowballstemmer==2.2.0
+soupsieve==2.6
+spacy==3.8.2
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+SQLAlchemy==2.0.35
+srsly==2.4.8
+st-annotated-text==4.0.1
+st-theme==1.2.3
+stack-data==0.6.3
+streamlit==1.40.1
+streamlit-aggrid==1.0.5
+streamlit-camera-input-live==0.2.0
+streamlit-card==1.0.2
+streamlit-embedcode==0.1.2
+streamlit-extras==0.5.0
+streamlit-faker==0.0.3
+streamlit-image-coordinates==0.1.9
+streamlit-keyup==0.2.4
+streamlit-pills==0.3.0
+streamlit-toggle-switch==1.0.2
+streamlit-vertical-slider==2.5.5
+striprtf==0.0.26
+sympy==1.13.1
+tenacity==8.5.0
+terminado==0.18.1
+thinc==8.3.2
+threadpoolctl==3.5.0
+tifffile==2024.9.20
+tiktoken==0.8.0
+tinycss2==1.4.0
+tokenizers==0.20.3
+toml==0.10.2
+tomlkit==0.13.2
+toolz==1.0.0
+topicgpt==1.0.0
+torch==2.5.1
+tornado==6.4.1
 tqdm==4.67.0
-# traitlets==5.14.3
-# transformers==4.46.2
-# triad==0.9.8
-# triton==3.1.0
+traitlets==5.14.3
+transformers==4.46.2
+triad==0.9.8
+triton==3.1.0
 trulens==1.2.6
 trulens-apps-langchain==1.1.0
 trulens-apps-llamaindex==1.2.6
@@ -323,30 +323,32 @@ trulens-dashboard==1.2.6
 trulens-feedback==1.2.6
 trulens-providers-openai==1.2.6
 trulens_eval==1.2.6
-# typer==0.13.1
-# types-python-dateutil==2.9.0.20241003
-# typing-inspect==0.9.0
-# typing_extensions==4.12.2
-# tzdata==2024.2
-# uc-micro-py==1.0.3
-# ujson==5.10.0
-# umap-learn==0.5.7
-# uri-template==1.3.0
-# urllib3==2.2.3
-# validators==0.34.0
-# wasabi==1.1.3
-# watchdog==6.0.0
-# wcwidth==0.2.13
-# weasel==0.4.1
-# webcolors==24.11.1
-# webencodings==0.5.1
-# websocket-client==1.8.0
-# whatthepatch==1.0.7
-# widgetsnbextension==4.0.13
-# wrapt==1.16.0
-# xarray==2024.10.0
-# xxhash==3.5.0
-# xyzservices==2024.9.0
-# yapf==0.43.0
-# yarl==1.17.1
-# zipp==3.21.0
+typer==0.13.1
+types-python-dateutil==2.9.0.20241003
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2024.2
+uc-micro-py==1.0.3
+ujson==5.10.0
+umap-learn==0.5.7
+uri-template==1.3.0
+urllib3==2.2.3
+validators==0.34.0
+wasabi==1.1.3
+watchdog==6.0.0
+wcwidth==0.2.13
+weasel==0.4.1
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
+whatthepatch==1.0.7
+widgetsnbextension==4.0.13
+wrapt==1.16.0
+xarray==2024.10.0
+xxhash==3.5.0
+xyzservices==2024.9.0
+yapf==0.43.0
+yarl==1.17.1
+zipp==3.21.0
+
+numpy==2.0.0
