--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.11"
 trulens = "^1.3.0"
 trulens-providers-openai = "^1.3.0"
 bertopic = {extras = ["flair", "use"], version = "^0.16.4"}
+langid = "^1.1.6"
 
 
 [build-system]
