--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ bertopic = {extras = ["flair", "use"], version = "^0.16.4"}
 langid = "^1.1.6"
 langchain-together = "^0.3.0"
 pyvespa = "^0.52.0"
+openpyxl = "^3.1.5"
 
 
 [build-system]
