--- a/evaluations/evaluation_config-small.json
+++ b/evaluations/evaluation_config-small.json
@@ -3,20 +3,41 @@
     {
       "name": "Relevance",
       "description": "Determine if the response stays on topic.",
-      "prompt": "Evaluate whether the response is relevant to the given question. If off-topic, specify what is irrelevant.\n\nQuestion: {question}\nResponse: {response}\n\nRate relevance on a scale of 0-3:\n- 0: Completely irrelevant\n- 1: Partially relevant\n- 2: Mostly relevant\n- 3: Fully relevant",
-      "scale": [0, 1, 2, 3]
+      "sys_prompt": "Evaluate whether the response is relevant to the given question. If off-topic, specify what is irrelevant.\nRate relevance on a scale of 0-3:",
+      "scale": [0, 1, 2, 3],
+      "scale_labels": [
+        "Completely irrelevant",
+        "Partially relevant",
+        "Mostly relevant",
+        "Fully relevant"
+      ],
+      "user_prompt": "\nQuestion: {question}\nResponse: {response}\n"
     },
     {
       "name": "Coherence & Fluency",
       "description": "Evaluate if the response is well-structured and easy to understand.",
-      "prompt": "Assess the clarity and fluency of the response. Is it grammatically correct and well-structured?\n\nResponse: {response}\n\nRate coherence & fluency on a scale of 0-3:\n- 0: Very difficult to understand\n- 1: Somewhat unclear\n- 2: Mostly clear\n- 3: Fully clear and fluent",
-      "scale": [0, 1, 2, 3]
+      "sys_prompt": "Assess the clarity and fluency of the response. Is it grammatically correct and well-structured?\n\nRate coherence & fluency on a scale of 0-3:",
+      "scale": [0, 1, 2, 3],
+      "scale_labels": [
+        "Very difficult to understand",
+        "Somewhat unclear",
+        "Mostly clear",
+        "Fully clear and fluent"
+      ],
+      "user_prompt": "\nResponse: {response}\n"
     },
     {
       "name": "Logical Consistency",
       "description": "Check if the response contradicts itself.",
-      "prompt": "Analyze the logical consistency of the response. Does it contain contradictions?\n\nResponse: {response}\n\nRate consistency on a scale of 0-3:\n- 0: Completely inconsistent\n- 1: Some inconsistencies\n- 2: Mostly consistent\n- 3: Fully consistent",
-      "scale": [0, 1, 2, 3]
+      "sys_prompt": "Analyze the logical consistency of the response. Does it contain contradictions?\nRate consistency on a scale of 0-3:",
+      "scale": [0, 1, 2, 3],
+      "scale_labels": [
+        "Completely inconsistent",
+        "Some inconsistencies",
+        "Mostly consistent",
+        "Fully consistent"
+      ],
+      "user_prompt": "\nResponse: {response}\n"
     }
   ]
 }
