--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ package-mode = false
 python = "^3.11"
 trulens = "^1.3.0"
 trulens-providers-openai = "^1.3.0"
-bertopic = {extras = ["flair", "use"], version = "^0.16.4"}
+bertopic = { extras = ["flair", "use"], version = "^0.16.4" }
 langid = "^1.1.6"
 langchain-together = "^0.3.0"
 pyvespa = "^0.52.0"
@@ -21,3 +21,6 @@ langfuse = "^2.59.7"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.basedpyright]
+typeCheckingMode = "standard"
